GNOME Bugzilla – Bug 754987
Inspector can't show GtkAdjustments anymore
Last modified: 2015-09-14 21:37:32 UTC
I'm not sure if this is true for all GObjects(which aren't widgets), but the inspector can't show the adjustments of a GtkScrollable anymore here. This works fine in 3.16. The problem seems to be in prop-list.c in show_object, but the git log doens't show anything significant that might have changed. I'm reproducing this by starting gtk3-demo, selecting the treeview on the left, scrolling down to the vadjustment and clicking on the "Properties" button there. The popover just hides without the inspector actually showing another object.
commit bcc0a54383b65c4e476e481cc0485d49d34adbbc Author: Benjamin Otte <otte@redhat.com> Date: Mon Sep 14 23:32:16 2015 +0200 inspector: Store the parent for the object tree This allows selecting newly added random objects.