inspector: Store the parent for the object tree

This allows selecting newly added random objects.

https://bugzilla.gnome.org/show_bug.cgi?id=754987